2002-01-06  Richard Frith-Macdonald <rfm@gnu.org>

	* Tools/autogsdoc.m: Minor bugfix ... any .h file processed should
	also be processed as a .gsdoc file to produce indexes and html.

2002-01-05  Richard Frith-Macdonald <rfm@gnu.org>

	* Tools/autogsdoc.m: Simplify by removing SourceDirectory default.
	Change mechanism for handling multiple source files for one header
	(need capability to write dependency rules for make).
	* Tools/AGSParser.[hm]: Add mechanism to return list of source
	files on which a document depends.
	* Tools/gsdoc-0_6_7.dtd: Permit wider use of index element.
	* Tools/AGSHtml.m: ditto, and support indexing of category methods
	along with class methods.
	* Source/GNUmakefile (Base_AGSDOC_FLAGS): Remove the SourceDirectory
	option ... now assumed to be the current directory for simplicity.
	* Source/Base.gsdoc: Add class and protocol indexes.

2002-01-04  Richard Frith-Macdonald <rfm@gnu.org>

	* Source/GNUmakefile (Base_AGSDOC_FLAGS): Fix to use
	-HeaderDirectory and -SourceDirectory to get docs to build again...
	hopefully with both sets of make rules.

Fri Jan  4 15:44:02 2002  Nicola Pero  <n.pero@mi.flashnet.it>

	* base.make.in (GNUSTEP_BASE_HAVE_LIBXML): Define.
	* Source/GNUmakefile (Base_AGSDOC_FLAGS): Do not use
	-HeaderDirectory.
	(Base_HEADER_FILES_DIR): Define.
	* Source/GNUmakefile: Include documentation.make only if doc=yes
	is passed on the command line.
	* Tools/GNUmakefile: Idem.
	
2002-01-04  Richard Frith-Macdonald <rfm@gnu.org>

	* Tools/autogsdoc.m: Rearrange code somewhat and remove auto
	generation of index and 'up' links ... now requires an explicit
	-Up if you want one.  Fix to support multiple source files parsed
	per interface file.
	* Tools/GNUmakefile: Add -Up for documentation generation
	* Source/GNUmakefile: ditto

Fri Jan  4 11:42:23 2002  Nicola Pero  <n.pero@mi.flashnet.it>

	* Tools/HTMLLinker.m: Implemented -FixupAllLinks, -PathMappings,
	-PathMappingsFile options.  Made -CheckLinks default to YES.